tests/negative/neg_pr115_same_line_missing_semicolon.safe
package Neg_PR115_Same_Line_Missing_Semicolon

   type Counter is range 0 to 10;

   function Broken returns Counter

      return 0 return 1;

